RESOLVED FIXED153572
Include the right WebKitAdditions files
https://bugs.webkit.org/show_bug.cgi?id=153572
Summary Include the right WebKitAdditions files
Anders Carlsson
Reported 2016-01-27 16:43:04 PST
Include the right WebKitAddition files
Attachments
Patch (2.11 KB, patch)
2016-01-27 16:44 PST, Anders Carlsson
thorton: review+
Anders Carlsson
Comment 1 2016-01-27 16:44:22 PST
WebKit Commit Bot
Comment 2 2016-01-27 16:45:39 PST
Attachment 270063 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/WebPageProxy.cpp:713: "WebKitAdditions/WebPageProxyInitialization.cpp" already included at Source/WebKit2/UIProcess/WebPageProxy.cpp:481 [build/include] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3 2016-01-27 17:14:22 PST
Note You need to log in before you can comment on or make changes to this bug.