Include the right WebKitAdditions files https://bugs.webkit.org/show_bug.cgi?id=153572

Reviewed by Tim Horton.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::WebPageProxy):
(WebKit::WebPageProxy::reattachToWebProcess):

Canonical link: https://commits.webkit.org/171647@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195712 268f45cc-cd09-0410-ab3c-d52691b4dbfc